[gd_scene load_steps=7 format=3 uid="uid://rthxfyma5sfk"]

[ext_resource type="Script" uid="uid://checqkkyahuvl" path="res://Scripts/target.gd" id="1_ls7vh"]
[ext_resource type="Texture2D" uid="uid://60gmhj82ueix" path="res://icon.svg" id="1_vq1qf"]
[ext_resource type="Texture2D" uid="uid://cjjcpeen2unba" path="res://Assets/Target/Target-Sheet.png" id="3_jgpce"]

[sub_resource type="GDScript" id="GDScript_jgpce"]
script/source = "extends Sprite2D

var frames = texture.get_width() / region_rect.size.x

func _ready():
	var random_index = randi_range(0, frames - 1)
	region_rect.position.x = random_index * region_rect.size.x
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7f73g"]
size = Vector2(76, 148)

[sub_resource type="GDScript" id="GDScript_otvy6"]
script/source = "extends Label

@onready var target = $\"..\"

func _process(_delta):
	text = \"HEALTH : \" + str(target.health)
"

[node name="Target" type="Node2D"]
script = ExtResource("1_ls7vh")

[node name="Target_Sprite_WIP" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.536, 1)
texture = ExtResource("1_vq1qf")

[node name="Random_Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_jgpce")
region_enabled = true
region_rect = Rect2(0, 0, 69, 128)
script = SubResource("GDScript_jgpce")

[node name="Target_Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target_Hitbox"]
shape = SubResource("RectangleShape2D_7f73g")

[node name="Label" type="Label" parent="."]
offset_left = -65.0
offset_top = -138.0
offset_right = 64.0
offset_bottom = -86.0
text = "HEALTH"
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_otvy6")

[connection signal="mouse_entered" from="Target_Hitbox" to="." method="_on_target_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Target_Hitbox" to="." method="_on_target_hitbox_mouse_exited"]
